<resources>
    <string name="app_name">F1 News</string>

    <!-- navigation drawer titles -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="drawer_title">Формула 1 на F1news.ru - все новости Формулы 1 2017</string>
    <string name="nav_memuar_title">Статьи</string>
    <string name="nav_news_title">Новости</string>
    <string name="nav_tech_title">Техника</string>
    <string name="nav_interview_title">Интервью</string>
    <string name="nav_history_title">История</string>
    <string name="nav_columns_title">Авторские колонки</string>
    <string name="nav_autosport_title">Новости автоспорта</string>
    <string name="nav_settings_title">Настройки</string>

    <!-- content provider strings -->
    <string name="invalid_query_uri">Invalid query Uri:</string>
    <string name="invalid_delete_uri">Invalid delete Uri:</string>
    <string name="invalid_insert_uri">Invalid insert Uri:</string>
    <string name="invalid_update_uri">Invalid update Uri:</string>
    <string name="insert_failed">Insert failed: s</string>

    <!-- toast strings -->
    <string name="network_not_available">Подключение к сети отсутствует</string>
    <string name="news_loaded">Загружено</string>
    <string name="no_isset_news_to_load">Нет новостей для загрузки</string>
    <string name="load_is_runned">Запущена загрузка новостей в фоне</string>

    <!-- preferences titles -->
    <string name="settings_title">Настройки</string>

    <string name="category_hide_news">Внешний вид</string>
    <string name="hide_read_news_checkbox">Скрыть прочитанные новости</string>
    <string name="fullscreen_video">Видео в полноэкранном режиме</string>
    <string name="fullscreen_video_summary">Включите данную опцию если при просмотре видео оно постоянно становится в паузу</string>
    <string name="list_news_view_title">Оформление списка новостей</string>
    <string name="list_news_view_title_summary">Настройка активируется после перезапуска приложения</string>
    <string name="hide_read_news_checkbox_summary">В списке новостей будут скрыты прочитанные новости</string>
    <string name="sections_news_view_title">Включить разделы новостей</string>
    <string name="sections_news_view_title_summary">Новости будут выводиться по разделам. Настройка активируется после перезапуска приложения</string>

    <string name="category_autorefresh">Автообновление новостей</string>
    <string name="refresh_interval_on">Включить автообновление</string>
    <string name="refresh_interval">Частота автообновления</string>

    <string name="reminder_to_gp">Напоминание о Гран-При</string>
    <string name="reminder_on">Включить напоминание о Гран-При</string>
    <string name="reminder">Интервал напоминания</string>
    <string name="reminder_data_null">Отсутствуют данные о следующем Гран-При, обновите данные приложения</string>
    <string name="reminder_ringtone_title">Звук напоминания</string>
    <string name="reminder_ringtone_summary">Выбрать звук напоминания</string>
    <string name="reminder_vibration_title">Включить вибро при напоминании</string>
    <string name="ringtone_null">Без звука</string>

    <string name="system_pref_title">Системные</string>
    <string name="move_pictures_to_sd">Переместить изображения</string>
    <string name="move_pictures_to_sd_summary_prev">Для переноса изображений необходима карта памяти в устройстве</string>
    <string name="move_pictures_to_sd_summary">Перенести все изображения на карту памяти</string>
    <string name="news_load_running">Запущена загрузка новостей, дождитесь окончания и повторите</string>
    <string name="move_message">Дождитесь окончания переноса файлов</string>
    <string name="move_title_to_sd">Перенос изображений на карту памяти</string>
    <string name="move_title_to_memory">Перенос изображений в память устройства</string>

    <string name="doze_disabled_title">Отключить энергосбережение</string>
    <string name="doze_disabled_summary">Данная функция необходима для работы приложения в режиме Doze. Актуальна для Android 6.0 и выше</string>

    <!-- choose main image -->
    <string name="main_image_choose_title">Выбор главного изображения</string>
    <string-array name="entries">
        <item>Item 1</item>
        <item>Item 2</item>
        <item>Item 3</item>
        <item>Item 4</item>
        <item>Item 5</item>
    </string-array>
    <string-array name="entryValues">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="entryImages">
        <item>file:///android_asset/mainImages/top_image1.webp</item>
        <item>file:///android_asset/mainImages/top_image2.webp</item>
        <item>file:///android_asset/mainImages/top_image3.webp</item>
        <item>file:///android_asset/mainImages/top_image4.webp</item>
        <item>file:///android_asset/mainImages/top_image5.webp</item>
    </string-array>

    <!-- intervals -->
    <string-array name="intervals_title">
        <item>5 минут</item>
        <item>15 минут</item>
        <item>30 минут</item>
        <item>1 час</item>
        <item>3 часа</item>
        <item>6 часов</item>
        <item>24 часа</item>
    </string-array>
    <string-array name="intervals_milliseconds">
        <item>300000</item>
        <item>900000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>10800000</item>
        <item>21600000</item>
        <item>86400000</item>
    </string-array>
    <string name="intervals_default_value">86400000</string>

    <!-- news list view preferences -->
    <string-array name="list_news_view_title">
        <item>Список</item>
        <item>Карточки</item>
    </string-array>
    <string-array name="list_news_view">
        <item>list</item>
        <item>card</item>
    </string-array>
    <string name="list_news_view_default">list</string>

    <!-- download news plurals -->
    <plurals name="news_plurals">
        <item quantity="zero">нет новостей</item>
        <item quantity="one">Загружена %1$d новость</item>
        <item quantity="two">Загружены %1$d новости</item>
        <item quantity="few">Загружены %1$d новости</item>
        <item quantity="many">Загружено %1$d новостей</item>
        <item quantity="other">Загружено %1$d новости</item>
    </plurals>

    <string name="get_new_news">Получены новости портала F1News.ru</string>
    <string name="reminder_ticker">Напоминание о Гран-При</string>
    <string name="reminder_content_text">До старта %1$s осталось %2$s</string>
    <string name="gp_online">ОНЛАЙН</string>

    <string name="open_in_browser">Открыть в браузере</string>
    <string name="action_share">Поделиться</string>
    <string name="action_backpress">Вернуться к разделу</string>

    <string name="gp_title_font_size">Размер шрифта заголовка Гран-При</string>
    <string name="gp_timer_font_size">Размер шрифта таймера Гран-При</string>

    <string-array name="font_size">
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
        <item>18</item>
        <item>24</item>
        <item>26</item>
        <item>30</item>
        <item>32</item>
        <item>36</item>
    </string-array>
    <string name="font_size_default">12</string>

    <!-- Fonts -->
    <string name="font_Perfograma">fonts/Perfograma.ttf</string>
    <string name="font_Speedway">fonts/Speedway.ttf</string>
    <string name="font_Roboto_Regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_Roboto_Medium">fonts/Roboto-Medium.ttf</string>

    <!-- popup button -->
    <string name="popup_button_text">вверх</string>

    <!-- bottom bar strings -->
    <string name="weekend_info">Weekend</string>
    <string name="text_online">Text</string>
    <string name="on_lap">On-lap</string>
    <string name="session_online">Timings</string>

    <!-- Video -->
    <string name="description">description</string>

    <string name="autoscroll">Автопрокрутка</string>

    <!-- Online timing strings -->
    <string name="session_link">https://lc.f1news.ru/live/session/%1$d.json</string>
    <string name="leader_gap_text">-leader gap-</string>
    <string name="gap_text">-gap-</string>
    <string name="pits_text">-pits-</string>
    <string name="last_lap_text">-last lap-</string>
    <string name="best_lap_text">-best lap-</string>
    <string name="last_laps">-laps-</string>

    <!-- Online timing status strings -->
    <string name="track_temp_text">"\u2103   track temp"</string>
    <string name="air_temp_text">"\u2103   air temp"</string>
    <string name="laps_text">"   lap/laps"</string>

    <string name="title_activity_preferences">Настройки приложения</string>
</resources>
