<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:title="@string/nav_news_title"/>
        <item
            android:id="@+id/nav_memuar"
            android:title="@string/nav_memuar_title"/>
        <item
            android:id="@+id/nav_interview"
            android:title="@string/nav_interview_title"/>
        <item
            android:id="@+id/nav_tech"
            android:title="@string/nav_tech_title"/>
        <item
            android:id="@+id/nav_history"
            android:title="@string/nav_history_title"/>
        <item
            android:id="@+id/nav_columns"
            android:title="@string/nav_columns_title"/>
        <item
            android:id="@+id/nav_autosport"
            android:title="@string/nav_autosport_title"/>
    </group>

</menu>
