<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/category_hide_news">

        <CheckBoxPreference
            android:key="hide_read_news"
            android:summary="@string/hide_read_news_checkbox_summary"
            android:title="@string/hide_read_news_checkbox"/>
        <ListPreference
            android:defaultValue="@string/list_news_view_default"
            android:key="list_news_view"
            android:entries="@array/list_news_view_title"
            android:entryValues="@array/list_news_view"
            android:title="@string/list_news_view_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/category_autorefresh">

        <CheckBoxPreference
            android:key="refresh_interval_on"
            android:title="@string/refresh_interval_on"/>
        <ListPreference
            android:defaultValue="@string/refresh_intervals_default_value"
            android:key="refresh_interval"
            android:entries="@array/refresh_intervals_title"
            android:entryValues="@array/refresh_intervals"
            android:title="@string/refresh_interval"/>
    </PreferenceCategory>
</PreferenceScreen>