<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/track_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/flag"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/flag_green" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <by.madcat.development.f1newsreader.styling.CustomViews.RobotoRegularTextView
                    android:id="@+id/track_temp_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

                <by.madcat.development.f1newsreader.styling.CustomViews.RobotoRegularTextView
                    android:id="@+id/track_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_temp_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <by.madcat.development.f1newsreader.styling.CustomViews.RobotoRegularTextView
                    android:id="@+id/air_temp_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0" />

                <by.madcat.development.f1newsreader.styling.CustomViews.RobotoRegularTextView
                    android:id="@+id/air_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/air_temp_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <by.madcat.development.f1newsreader.styling.CustomViews.RobotoRegularTextView
                    android:id="@+id/laps_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/0" />

                <by.madcat.development.f1newsreader.styling.CustomViews.RobotoRegularTextView
                    android:id="@+id/laps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/laps_text" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
